fix(Dropdown): 컴포넌트 z-index 수정

--- a/src/components/atoms/Options/index.module.scss
+++ b/src/components/atoms/Options/index.module.scss
@@ -3,7 +3,7 @@
 .options {
   position: absolute;
   right: 0;
-  z-index: 1;
+  z-index: 10;
 
   box-sizing: border-box;
   width: 100%;
