--- a/src/components/molecules/Dropdown/index.module.scss
+++ b/src/components/molecules/Dropdown/index.module.scss
@@ -2,7 +2,7 @@
 
 .dropdown {
   position: absolute;
-  z-index: 1;
+  z-index: 10;
 
   border: 1px solid $BLUISH-GRAY-100;
   border-radius: 8px;
